argocd/apps/webrag/config/webrag-api-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrag-api
  namespace: webrag
  labels:
    app: webrag-api
spec:
  selector:
    app: webrag-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
