argocd/apps/webrag/config/webrag-frontend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrag-frontend
  namespace: webrag
spec:
  selector:
    app: webrag-frontend
  ports:
    - port: 80
      targetPort: 80
