argocd/apps/webrag/config/webrag-worker-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-worker
  namespace: rag-system
  labels:
    app: rag-worker
spec:
  selector:
    app: rag-worker
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
