argocd/apps/webrag/config/webrag-worker-embed-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-worker-embed
  namespace: rag-system
  labels:
    app: rag-worker-embed
spec:
  selector:
    app: rag-worker-embed
  ports:
    - name: metrics
      port: 9091
      targetPort: 9091
