argocd/apps/webrag/config/webrag-worker-embed-headless-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrag-worker-embed-headless
  namespace: webrag
spec:
  clusterIP: None
  selector:
    app: webrag-worker-embed
  ports:
    - name: metrics
      port: 9091
      targetPort: 9091
