argocd/apps/webrag/config/webrag-worker-ingest-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrag-worker-ingest
  namespace: webrag
  labels:
    app: webrag-worker-ingest
spec:
  selector:
    app: webrag-worker-ingest
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
