argocd/apps/webrag/config/webrag-docs-redirect-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webrag-docs-redirect
  namespace: webrag
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-webrag-docs
  hostnames:
    - docs.webrag.nss.jkzl.eu
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: webrag.nss.jkzl.eu
            path:
              type: ReplaceFullPath
              replaceFullPath: /user-docs/
            statusCode: 301
